# rag-sufficient-context

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
configs/experiments/: asymmetric.yaml  baseline.yaml  nq_open.yaml  qwen3b_bm25.yaml  qwen7b_hybrid.yaml
notebooks/: colab_pipeline.ipynb  demo.ipynb  kaggle_pipeline.ipynb  main_pipeline.ipynb  main_pipeline_with_results.ipynb  rag_sufficient_context_single_pipeline_verified_executed.ipynb
prompts/: autorater_basic.txt  autorater_cot.txt  autorater_fewshot.txt  confidence_p_true.txt  confidence_self_report.txt  qa.txt
reports/: 2026-04-23--tinyllama-bm25--r01--baseline-run-report.md  baseline_report.md  final_report.md  presentation_outline.md
results/: evaluation.json  final_metrics.json  retrieval_summary.json  run_metadata.json  selective_curves.json
results/single_notebook_run/: evaluation.json  retrieval_summary.json  run_metadata.json  selective_curves.json
results/smoke_colab/: conformal.json  evaluation.json  retrieval.json  run_metadata.json  selective_curves.json  summary.json
run/pipeline/: make_figures.py  run_experiment.py  run_matrix.py
src/: __init__.py  autorater.py  confidence.py  config.py  evaluation.py  gate.py  generation.py  prompts.py  retrieval.py  utils.py
src/analysis/: __init__.py  bootstrap.py  stratified.py
src/gate/: plots.py  (+6 more)
tests/: conftest.py  test_aggregation.py  test_bm25_determinism.py  test_config.py  test_evaluation.py  test_gate_selective.py  test_parse_llm_response.py  test_registries.py
(+28 files in other folders)
